fix: make communication radio not muted

--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -120,10 +120,10 @@
                 </div>
                 <div class="row m-b">
                   <!--start communication method input-->
-                  <div class="col-sm-1" ng-repeat="method in methods">
+                  <div class="col-sm-2 m-b" ng-repeat="method in methods">
                     <div>
                       <label
-                        class="md-check text-muted"
+                        class="md-check"
                         title="Method of Communication used by Reporter"
                       >
                         <input
