--- a/app/views/services/_partials/detail.html
+++ b/app/views/services/_partials/detail.html
@@ -42,6 +42,7 @@
                       ng-model="service.group"
                       placeholder="Select Group"
                       class="form-control"
+                      oi-select-options="{cleanModel: true}"
                     ></oi-select>
                     <label title="Group" class="floating-label">Group</label>
                   </div>
@@ -69,6 +70,7 @@
                       ng-model="service.priority"
                       placeholder="Select Priority"
                       class="form-control"
+                      oi-select-options="{cleanModel: true}"
                     ></oi-select>
                     <label title="Priority" class="floating-label"
                       >Priority</label
