--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -59,7 +59,7 @@
               >
                 <a
                   show-if-has-permit="servicerequest:verify"
-                  ng-click="load({operator:{$eq:null}, resetPage:true, reset:true, misc:'unverified'})"
+                  ng-click="load({operator:{$ne:null}, assignee:{$ne:null}, completedAt:{$ne:null}, verifiedAt:{$eq:null}, resolvedAt:{$eq:null}, resetPage:true, reset:true, misc:'unverified'})"
                   class="nav-link text-muted block"
                   title="Completed Issues Waiting Verification"
                 >
@@ -72,7 +72,7 @@
               >
                 <a
                   show-if-has-permit="servicerequest:approve"
-                  ng-click="load({operator:{$eq:null}, resetPage:true, reset:true, misc:'unapproved'})"
+                  ng-click="load({operator:{$ne:null}, assignee:{$ne:null}, verifiedAt:{$ne:null}, approvedAt:{$eq:null}, resolvedAt:{$eq:null}, resetPage:true, reset:true, misc:'unapproved'})"
                   class="nav-link text-muted block"
                   title="Verified Issues Waiting Approval"
                 >
