feat: allow action flow on workspace ui

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -75,7 +75,7 @@
   >
     <a
       show-if-has-permit="servicerequest:resolve"
-      ng-click="onClose()"
+      ng-click="onResolve()"
       class="nav-link text-muted no-border"
       title="Click To Resolve and Signal Feedback Provided To Reporter"
     >
