--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -134,7 +134,7 @@
                 class="arrow left b-success pull-in"
                 style="border-color: #1B5E1F;"
               ></b>
-              Verified
+              Approved
             </span>
           </p>
           <!-- TODO show attachment changelog -->
