feat(worklog): add item used under issue description

--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -223,6 +223,9 @@
           <p>&nbsp;</p>
         </div>
         <!-- end issue description -->
+        <!-- start issue worklog(used material & equipment) -->
+        <div ng-include="'views/servicerequests/_partials/worklog.html'"></div>
+        <!-- end issue worklog(used material & equipment) -->
         <!-- start issue map -->
         <div
           class="padding b-t"
