--- a/app/views/servicerequests/_partials/worklog.html
+++ b/app/views/servicerequests/_partials/worklog.html
@@ -1,7 +1,7 @@
 <!-- start issue worklog -->
 <div class="padding b-t">
   <h6 class="m-b" title="Issue WorkLog">WorkLog</h6>
-  <table class="table table-bordered">
+  <table class="table table-bordered table-stats">
     <thead>
       <tr>
         <th title="Item(Material or Equipment)">
@@ -16,15 +16,16 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Adaptor Flange 10’’ GS</td>
-        <td>1</td>
-        <td>PCS</td>
-      </tr>
-      <tr>
-        <td>Adaptor Flange 10’’ GS</td>
-        <td>1</td>
-        <td>PCS</td>
+      <tr ng-repeat="worklog in worklogs">
+        <td title="{{worklog.item.name}}">
+          {{worklog.item.name}}
+        </td>
+        <td title="{{worklog.quantity}}">
+          {{worklog.quantity}}
+        </td>
+        <td title="{{worklog.item.properties.unit}}">
+          {{worklog.item.properties.unit}}
+        </td>
       </tr>
     </tbody>
   </table>
