--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -84,6 +84,16 @@
       </span>
     </a>
   </li>
+  <li ng-if="!servicerequest.resolvedAt" class="nav-item b-l p-l">
+    <a
+      class="nav-link text-muted no-border"
+      title="Click To Attach More Images"
+    >
+      <span class="nav-text">
+        <i class="icon-camera"></i>
+      </span>
+    </a>
+  </li>
   <li
     ng-if="servicerequest.operator && !servicerequest.resolvedAt"
     class="nav-item b-l p-l"
