feat: add changelog images to gallery

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -86,6 +86,7 @@
   </li>
   <li ng-if="!servicerequest.resolvedAt" class="nav-item b-l p-l">
     <a
+      ngf-select="onImage($file)"
       class="nav-link text-muted no-border"
       title="Click To Attach Supporting Images"
     >
