--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -252,7 +252,7 @@
           class="padding b-t"
           ng-show="servicerequest.attachments && servicerequest.attachments.length > 0"
         >
-          <h6 class="m-b" title="Issue Attachements">Attachments</h6>
+          <h6 class="m-b" title="Issue Images">Images</h6>
           <ng-gallery images="servicerequest.attachments"></ng-gallery>
         </div>
         <!-- end issue attachements -->
