feat: allow document attachment & timeline view

--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -97,6 +97,7 @@
   </li>
   <li ng-if="!servicerequest.resolvedAt" class="nav-item b-l p-l">
     <a
+      ngf-select="onDocument($file)"
       class="nav-link text-muted no-border"
       title="Click To Attach Supporting Documents"
     >
