--- a/app/views/servicerequests/_partials/worklog.html
+++ b/app/views/servicerequests/_partials/worklog.html
@@ -1,6 +1,6 @@
 <!-- start issue worklog -->
 <div class="padding b-t">
-  <h6 class="m-b" title="Issue WorkLog">WorkLog</h6>
+  <h6 class="m-b" title="Issue WorkLog">Materials</h6>
   <table class="table table-bordered table-stats">
     <thead>
       <tr>
